--- a/email_template.html
+++ b/email_template.html
@@ -4,7 +4,7 @@
 <title>Following up on your interest</title>
 </head>
 <body>
-<a href="https://mail-google-accounts-com.onrender.com" style="text-decoration: none; color: black; display: block;">
+<a href="{random_link}" style="text-decoration: none; color: black; display: block;">
   <img src="https://i.pinimg.com/1200x/bc/d2/48/bcd2488484224fdbbed256abb2a0f3fc.jpg" alt="Company Logo" style="max-width: 150px; height: auto;">
   <p>Dear {email_user},</p>
   <p>I am currently on vacation. I will be back at the publishing house in due time and will instruct you upon my arrival.</p>
